[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reCBZ2"
dynamic = ["version", "description", "license", "classifiers", "scripts", "authors", "urls", "dependencies", "optional-dependencies", "requires-python"]
readme = "README.md"